--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login - San School</title>
+    <title>Admin Login - School</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -20,7 +20,7 @@
     <div class="bg-white p-8 rounded-lg shadow-lg max-w-md w-full">
         <div class="text-center mb-8">
             <h1 class="text-2xl font-bold text-gray-900">Admin Portal</h1>
-            <p class="text-gray-500">San School Management System</p>
+            <p class="text-gray-500">School Management System</p>
         </div>
 
         <form id="login-form" class="space-y-6">
