--- a/announcements.html
+++ b/announcements.html
@@ -1,79 +1,192 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Announcements - San School</title>
+    <title>Announcements - School</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #FDFBF8;
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Merriweather:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        school: {
+                            navy: '#0F172A',
+                            gold: '#D4AF37',
+                            cream: '#F9FAFB',
+                            blue: '#1E40AF'
+                        }
+                    },
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                        serif: ['Merriweather', 'serif'],
+                    }
+                }
+            }
         }
-    </style>
+    </script>
 </head>
 
-<body>
-    <header class="bg-white shadow-sm sticky top-0 z-50">
-        <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
-            <a href="index.html" class="font-bold text-xl text-gray-800">San School</a>
-            <a href="index.html" class="text-gray-600 hover:text-indigo-600">Back to Home</a>
-        </nav>
+<body class="bg-school-cream text-slate-800 antialiased flex flex-col min-h-screen">
+
+    <!-- Navbar -->
+    <nav class="bg-white border-b border-slate-200 sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-20 items-center">
+                <a href="index.html" class="flex items-center gap-3 group">
+                    <div
+                        class="w-10 h-10 bg-school-navy text-school-gold flex items-center justify-center rounded-lg font-serif font-bold text-2xl group-hover:bg-school-gold group-hover:text-school-navy transition">
+                        S</div>
+                    <div>
+                        <h1 class="text-xl font-bold text-school-navy font-serif leading-none">School</h1>
+                        <p class="text-[10px] text-slate-500 uppercase tracking-widest">Est. 2026</p>
+                    </div>
+                </a>
+                <a href="index.html" class="text-sm font-semibold text-slate-500 hover:text-school-blue transition"><i
+                        class="fas fa-arrow-left mr-2"></i> Back to Home</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Header -->
+    <header class="bg-school-navy text-white py-16 relative overflow-hidden">
+        <div class="max-w-7xl mx-auto px-4 relative z-10 text-center">
+            <p class="text-school-gold font-bold tracking-widest uppercase text-sm mb-4">News & Updates</p>
+            <h1 class="text-4xl md:text-5xl font-serif font-bold mb-4">School Announcements</h1>
+            <p class="text-slate-300 max-w-2xl mx-auto font-light">Stay informed about the latest news, academic
+                updates, and community notices from School.</p>
+        </div>
+        <!-- Background Pattern -->
+        <div class="absolute inset-0 opacity-10"
+            style="background-image: url('https://www.transparenttextures.com/patterns/cubes.png');"></div>
     </header>
 
-    <main class="max-w-4xl mx-auto px-4 py-12">
-        <h1 class="text-3xl font-bold text-gray-900 mb-8">School Announcements</h1>
-
-        <div id="announcements-list" class="space-y-8">
-            <!-- Loading State -->
-            <div class="animate-pulse space-y-4">
-                <div class="h-4 bg-gray-200 rounded w-3/4"></div>
-                <div class="h-4 bg-gray-200 rounded"></div>
-                <div class="h-4 bg-gray-200 rounded"></div>
+    <!-- Content -->
+    <main class="flex-grow py-16">
+        <div class="max-w-4xl mx-auto px-4" id="announcements-container">
+            <!-- Loading -->
+            <div class="text-center py-12">
+                <i class="fas fa-circle-notch fa-spin text-3xl text-school-gold mb-4"></i>
+                <p class="text-slate-500">Loading announcements...</p>
             </div>
         </div>
     </main>
 
+    <!-- Full Screen Detail View -->
+    <div id="detail-view"
+        class="fixed inset-0 z-[100] bg-white transform translate-x-full transition-transform duration-300 overflow-y-auto">
+        <!-- Sticky Header with Back Button -->
+        <div
+            class="sticky top-0 bg-white/95 backdrop-blur border-b border-slate-100 px-4 py-3 flex items-center shadow-sm z-10">
+            <button onclick="closeDetail()"
+                class="flex items-center text-slate-600 font-bold hover:text-school-navy transition">
+                <div class="w-8 h-8 rounded-full bg-slate-100 flex items-center justify-center mr-2"><i
+                        class="fas fa-arrow-left"></i></div>
+                Back
+            </button>
+            <span class="ml-auto text-xs font-bold text-school-gold uppercase tracking-widest">Details</span>
+        </div>
+
+        <div class="max-w-4xl mx-auto p-4 pb-20">
+            <div id="detail-image-container"
+                class="w-full bg-slate-100 rounded-xl overflow-hidden mb-8 shadow-sm hidden flex items-center justify-center">
+                <img id="detail-img" src="" class="max-w-full max-h-[85vh] object-contain">
+            </div>
+
+            <div class="max-w-2xl mx-auto">
+                <span id="detail-date" class="text-slate-400 font-serif italic mb-2 block">Date</span>
+                <h1 id="detail-title"
+                    class="text-3xl md:text-5xl font-serif font-bold text-school-navy mb-8 leading-tight">Title</h1>
+                <div id="detail-body"
+                    class="prose prose-lg prose-slate max-w-none text-slate-700 leading-loose whitespace-pre-line">
+                    Content...
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-white border-t border-slate-200 py-8 text-center text-slate-500 text-sm">
+        <p>&copy; 2026 School. All Rights Reserved.</p>
+    </footer>
+
+    <!-- Logic -->
     <script type="module">
         import { supabase } from './assets/js/supabase-client.js';
 
-        const listContainer = document.getElementById('announcements-list');
+        // State
+        let allAnnouncements = [];
 
         async function loadAnnouncements() {
-            const { data, error } = await supabase
-                .from('announcements')
-                .select('*')
-                .order('created_at', { ascending: false });
+            const container = document.getElementById('announcements-container');
+            const { data, error } = await supabase.from('announcements').select('*').order('created_at', { ascending: false });
 
             if (error) {
-                listContainer.innerHTML = '<p class="text-red-500">Error loading announcements.</p>';
+                container.innerHTML = `<div class="p-8 bg-red-50 text-red-600 rounded text-center">Error loading data.</div>`;
                 return;
             }
 
             if (!data || data.length === 0) {
-                listContainer.innerHTML = '<p class="text-gray-500">No announcements found.</p>';
+                container.innerHTML = `<div class="p-12 bg-white rounded shadow-sm text-center text-slate-500">No announcements found.</div>`;
                 return;
             }
 
-            listContainer.innerHTML = data.map(post => {
-                const date = new Date(post.created_at).toLocaleDateString('en-US', {
-                    year: 'numeric', month: 'long', day: 'numeric'
-                });
-                return `
-                    <article class="bg-white rounded-lg shadow-md overflow-hidden border border-gray-100">
-                        ${post.image_url ? `<img src="${post.image_url}" class="w-full h-64 object-cover" alt="${post.title}">` : ''}
-                        <div class="p-6">
-                            <h2 class="text-2xl font-bold text-gray-900 mb-2">${post.title}</h2>
-                            <p class="text-sm text-indigo-600 mb-4">${date}</p>
-                            <div class="prose max-w-none text-gray-700 whitespace-pre-line">
-                                ${post.content}
-                            </div>
+            allAnnouncements = data;
+
+            container.innerHTML = data.map((item, index) => `
+                <article class="bg-white rounded-xl shadow-sm border border-slate-100 overflow-hidden mb-8 transform hover:-translate-y-1 transition duration-300 cursor-pointer group flex flex-col md:flex-row" onclick="openPost(${index})">
+                    ${item.image_url ? `
+                        <div class="w-full md:w-1/3 bg-slate-100 flex items-center justify-center p-2 min-h-[200px]">
+                             <img src="${item.image_url}" class="max-h-64 md:max-h-full w-auto h-auto object-contain group-hover:scale-105 transition duration-500">
                         </div>
-                    </article>
-                `;
-            }).join('');
+                    ` : ''}
+                    <div class="p-6 md:p-8 flex-1 flex flex-col justify-center">
+                        <div class="flex items-center gap-3 mb-3">
+                            <span class="bg-school-navy text-white text-[10px] font-bold px-2 py-0.5 rounded uppercase tracking-wide">Notice</span>
+                            <span class="text-slate-400 text-xs font-serif italic">${new Date(item.created_at).toLocaleDateString()}</span>
+                        </div>
+                        <h2 class="text-xl md:text-2xl font-serif font-bold text-slate-800 mb-3 group-hover:text-school-blue transition leading-tight">${item.title}</h2>
+                        <p class="text-slate-600 text-sm line-clamp-2 md:line-clamp-3 mb-4">${item.content}</p>
+                        <span class="text-school-gold font-bold text-xs uppercase tracking-wider group-hover:underline mt-auto">Tap to Read &rarr;</span>
+                    </div>
+                </article>
+            `).join('');
+        }
+
+        // Full Screen Logic
+        window.openPost = (index) => {
+            const post = allAnnouncements[index];
+            const modal = document.getElementById('detail-view');
+
+            document.getElementById('detail-title').textContent = post.title;
+            document.getElementById('detail-body').textContent = post.content;
+            document.getElementById('detail-date').textContent = new Date(post.created_at).toLocaleDateString('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+
+            const imgContainer = document.getElementById('detail-image-container');
+            const img = document.getElementById('detail-img');
+
+            if (post.image_url) {
+                img.src = post.image_url;
+                img.onload = () => imgContainer.classList.remove('hidden'); // Only show when loaded
+                img.onerror = () => imgContainer.classList.add('hidden');
+                imgContainer.classList.remove('hidden'); // Try to show immediately
+            } else {
+                imgContainer.classList.add('hidden');
+            }
+
+            modal.classList.remove('translate-x-full');
+            document.body.style.overflow = 'hidden'; // Lock scroll
+        }
+
+        window.closeDetail = () => {
+            const modal = document.getElementById('detail-view');
+            modal.classList.add('translate-x-full');
+            document.body.style.overflow = ''; // Unlock scroll
         }
 
         loadAnnouncements();
